--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 	<header class="site-header">
 		<nav class="container nav">
 			<a class="brand" href="#home"><img class="logo" src="/assets/logo.png" alt="Logo" /><span>Nilesh</span></a>
-			<button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">☾</button>
-			<ul class="nav-links">
+			<div class="nav-actions">
+				<button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">☰</button>
+				<button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">☾</button>
+			</div>
+			<ul id="primary-nav" class="nav-links">
 				<li><a href="#about">About</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#hire">Hire Me</a></li>
